# tsp_algorithms

./: CMakeLists.txt  README.md  main.cpp
algorithms/: TSPAlgorithms.cpp  TSPAlgorithms.h  TSPExactAlgorithms.cpp  TSPExactAlgorithms.h  TSPGreedyAlgorithms.cpp  TSPGreedyAlgorithms.h  TSPHelperStructures.h  TSPLocalSearchAlgorithms.cpp  TSPLocalSearchAlgorithms.h  TSPPopulationAlgorithms.cpp  TSPPopulationAlgorithms.h
algorithms/helper_structures/: GeneticAlgorithmParameters.h  LocalSearchParameters.h  Specimen.h  TSPHelperStructures.h
input_data/MIE/: mie_opt.txt  tsp_10.txt  tsp_12.txt  tsp_13.txt  tsp_14.txt  tsp_15.txt  tsp_17.txt  tsp_6_1.txt  tsp_6_2.txt
input_data/MY/: mdata2.txt  my_opt.txt
input_data/SMALL/: mdata3.txt  mdata4.txt  mdata5.txt  opt.txt
menu/: ConsoleMenu.cpp  ConsoleMenu.h  MenuItem.cpp  MenuItem.h
parameter_analysis/: AnalysisPoint.h
parameter_analysis/local_search/: LSParameterAnalysis.cpp  LSParameterAnalysis.h
parameter_analysis/local_search/collected_data/simulated_annealing/: epoch_iterations_number.csv  initial_solution_algorithm.csv  initial_temperature.csv  linear_cooling_scheme.csv
parameter_analysis/local_search/collected_data/tabu_search_list/: cadenza_length_parameter.csv  initial_solution_algorithm.csv  iterations_number.csv  patterns_number_to_cache.csv  tabu_list_size.csv
parameter_analysis/populational_algorithms/: GAParameterAnalysis.cpp  GAParameterAnalysis.h
parameter_analysis/populational_algorithms/collected_data/genetic_algorithm/: population_size.csv  tournament_size.csv
python_scripts/exact_algorithms_data_analysis/: main.py
python_scripts/exact_algorithms_data_analysis/csv_files/: branch_and_bound_0h.csv  branch_and_bound_g.csv  branch_and_bound_nn.csv  brute_force_swap.csv  brute_force_tree.csv
python_scripts/genetic_algorithm_data_analysis/: main.py
python_scripts/genetic_algorithm_data_analysis/data/genetic_algorithm/: benchmark_table_ga_ts.csv  crossover_probability.csv  elites.csv  ga_time_benchmark.csv  generations.csv  mutation_probability.csv
python_scripts/genetic_algorithm_data_analysis/data/local_search/benchmarks/: merged_benchmarks.csv  (+1 more)
python_scripts/local_search_data_analysis/: main.py
python_scripts/local_search_data_analysis/data/benchmarks/: tabu_search_list_benchmark.csv  tabu_search_matrix_benchmark.csv
python_scripts/local_search_data_analysis/data/simulated_annealing/: geometric_cooling_scheme.csv  iterations_number.csv  logarithmic_cooling_scheme.csv  neighbourhood_algorithm.csv
python_scripts/local_search_data_analysis/data/tabu_search_list/: iterations_without_improvement_to_restart.csv  neighbourhood_algorithm.csv
structures/: DoublyLinkedList.cpp  DoublyLinkedList.h  Stack.h  Table.h
structures/graphs/: IGraph.cpp  IGraph.h  ListGraph.cpp  ListGraph.h  MatrixGraph.cpp  MatrixGraph.h
structures/graphs/misc/: Edge.h
tests/: ListGraphTest.cpp  ListGraphTest.h  MatrixGraphTest.cpp  MatrixGraphTest.h  MiscellaneousTests.cpp  MiscellaneousTests.h  TSPAlgorithmsTest.cpp  TSPAlgorithmsTest.h
time_tests/: TimeMeasurement.cpp  TimeMeasurement.h
time_tests/collected_data/exact_algorithms/: branch_and_bound_nn_g.csv  dynamic_programming.csv
utilities/: GraphUtils.cpp  GraphUtils.h  Random.cpp  Random.h  TSPRandom.cpp  TSPRandom.h  TSPUtils.cpp  TSPUtils.h
